[package]
name = "beeasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.size_opt]
inherits = "release"
debug = 0
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true

[profile.speed_opt]
inherits = "release"
debug = 0
codegen-units = 1
opt-level = 3
strip = "debuginfo"

[dependencies]
